--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,4 +6,10 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.126.0" 
+  HUGO_VERSION = "0.145.0"
+
+# KV命名空间配置
+[[kv_namespaces]]
+binding = "BLOG_STATS"
+preview_id = "BLOG_STATS_PREVIEW" # 用于本地开发
+id = "BLOG_STATS_PROD" # 用于生产环境 
